fix: dark mode text color error

--- a/src/layout/style.scss
+++ b/src/layout/style.scss
@@ -16,6 +16,7 @@ html {
 }
 
 body {
+  color: var(--primary-text-color) !important;
   background-color: var(--background-color) !important;
 }
 
